# embeddings-rs

./: .dockerignore  Cargo.toml  Dockerfile
candle-bert-cli/: Cargo.toml
candle-bert-cli/src/: main.rs
embeddings-client/: Cargo.toml
embeddings-client/src/: hub.rs
embeddings-server/: Cargo.toml
embeddings-server/src/: cmd.rs  embeddings.rs  logging.rs  main.rs  metrics.rs  model.rs  utils.rs
embeddings-server/src/models/: bert.rs  factory.rs  mod.rs  utils.rs
embeddings-utils/: Cargo.toml
embeddings-utils/src/: encoding.rs
