[package]
name = "embeddings-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
axum-prometheus = { version = "0.8.0" }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
