[package]
name = "embeddings-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
axum-prometheus = { version = "0.8" }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
fastembed = { version = "4.6" }
ort = { version = "2.0.0-rc.9" }
