[package]
name = "embeddings-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
axum-prometheus = { version = "0.8" }
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6", features = [
  "trace",
  "compression-gzip",
  "compression-zstd",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
utoipa-axum = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }

anyhow = { version = "1.0" }
hf-hub = { version = "0.4", features = ["tokio"] }
candle-core = { version = "0.8", features = [] }
candle-nn = { version = "0.8", features = [] }
candle-transformers = { version = "0.8" }
serde_json = { version = "1.0" }
tokenizers = { version = "0.21", features = ["onig"] }
clap = { version = "4.5", features = ["derive"] }

embeddings-utils = { path = "../embeddings-utils" }

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl"]
